--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -60,6 +60,13 @@ changelog:
       - "^docs:"
       - "^test:"
 
+brews:
+  - name: {{ .ProjectName }}
+      homepage: https://github.com/jdoiro3/DaGit
+    tap:
+      owner: jdoiro3
+      name: dagit
+
 release:
   # Repo in which the release will be created.
   # Default is extracted from the origin remote URL or empty if its private hosted.
