--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,9 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - uses: actions/setup-node@v4
+      - run: npm install -g yarn
+      - run: yarn install --frozen-lockfile
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
