--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -119,7 +119,7 @@ brews:
     # in case there is an indicator for prerelease in the tag e.g. v1.0.0-rc1
     #
     # Templates: allowed
-    skip_upload: true
+    skip_upload: auto
 
     # Repository to push the generated files to.
     repository:
