--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -62,91 +62,22 @@ changelog:
 
 brews:
   - name: "{{ .ProjectName }}"
-
-    # IDs of the archives to use.
-    # Empty means all IDs.
-    ids: []
-
-    # Headers to include in the `url` stanza.
-    # This can be a more modern alternative to `download_strategy` in some
-    # cases.
-    #
-    # Since: v1.25
-    url_headers:
-      - "Accept: application/octet-stream"
-      - 'Authorization: bearer #{ENV["HOMEBREW_GITHUB_API_TOKEN"]}'
-
-    # Allows you to set a custom download strategy. Note that you'll need
-    # to implement the strategy and add it to your tap repository.
-    # Example: https://docs.brew.sh/Formula-Cookbook#specifying-the-download-strategy-explicitly
-    download_strategy: CurlDownloadStrategy
-
-    # Allows you to add a custom require_relative at the top of the formula
-    # template.
-    custom_require: custom_download_strategy
-
-    # Git author used to commit to the repository.
-    commit_author:
-      name: goreleaserbot
-      email: bot@goreleaser.com
-
-    # The project name and current git tag are used in the format string.
-    #
-    # Templates: allowed
-    commit_msg_template: "Brew formula update for {{ .ProjectName }} version {{ .Tag }}"
-
-    # Directory inside the repository to put the formula.
-    directory: Formula
-
-    # Caveats for the user of your binary.
-    caveats: "How to use this binary"
-
-    # Your app's homepage.
-    homepage: "https://github.com/jdoiro3/DaGit"
-
-    # Your app's description.
-    #
-    # Templates: allowed
-    description: "Software to create fast and easy drum rolls."
-
-    # SPDX identifier of your app's license.
-    license: "MIT"
-
-    # Setting this will prevent goreleaser to actually try to commit the updated
-    # formula - instead, the formula file will be stored on the dist directory
-    # only, leaving the responsibility of publishing it to the user.
-    # If set to auto, the release will not be uploaded to the homebrew tap
-    # in case there is an indicator for prerelease in the tag e.g. v1.0.0-rc1
-    #
-    # Templates: allowed
-    skip_upload: auto
-
-    # Repository to push the generated files to.
     repository:
-      # Repository owner.
-      #
-      # Templates: allowed
       owner: jdoiro3
-
-      # Repository name.
-      #
-      # Templates: allowed
-      name: DaGit
-
-      # Optionally a branch can be provided.
-      #
-      # Default: default repository branch
-      # Templates: allowed
-      branch: main
-
-      # Optionally a token can be provided, if it differs from the token
-      # provided to GoReleaser
-      # Templates: allowed
-      token: "{{ .Env.GITHUB_PERSONAL_AUTH_TOKEN }}"
+      name: homebrew-dagit
+    directory: Formula
+    goarm: "7"
+    homepage: https://github.com/jdoiro3/dagit
+    description: Live DAG visual of Git's internals
+    license: MIT
+    dependencies:
+      - name: go
+        type: optional
+      - name: git
 
 release:
   # Repo in which the release will be created.
   # Default is extracted from the origin remote URL or empty if its private hosted.
   github:
     owner: jdoiro3
-    name: DaGit
+    name: dagit
