infra: updated brew config

--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -65,6 +65,8 @@ brews:
     repository:
       owner: jdoiro3
       name: homebrew-dagit
+      tap:
+      token: "{{ .Env.TAP_GITHUB_TOKEN }}"
     directory: Formula
     goarm: "7"
     homepage: https://github.com/jdoiro3/dagit
