--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -21,7 +21,18 @@ builds:
   - env:
       - CGO_ENABLED=0
     goos:
-      - linux
+      - linux/amd64
+      - linux/arm
+      - linux/arm64
+      - linux/loong64
+      - linux/mips
+      - linux/mips64
+      - linux/mips64le
+      - linux/mipsle
+      - linux/ppc64
+      - linux/ppc64le
+      - linux/riscv64
+      - linux/s390x
       - windows
       - darwin
 
